--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -31,6 +31,399 @@ In March 2012 IDW Publishing announced it would release new comics based on Judg
 On January 6, 2015, IDW Publishing announced it had acquired Top Shelf Productions. In February 2015, it was announced that IDW Publishing made a deal with Disney to continue the publication of the following comic books: Uncle Scrooge, Donald Duck, Mickey Mouse, and Walt Disney's Comics and Stories.
 </p><p>
 In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared universe of Hasbro brands, which was later known as the Hasbro Comic Book Universe. The first event was Revolution, followed by First Strike on 2017. In July 2017, Sega announced a partnership with IDW to publish comics based on Sonic the Hedgehog beginning in 2018, following the conclusion/cancellation of the previous series by Archie Comics.
+<li>24: Cold Warriors 	#1 	February 2008 
+<li>24: Midnight Sun 	#1 	July 2005 
+<li>24: Nightfall 	#1–5 	October 2005 – March 2006 
+<li>24: One Shot 	#1 	July 2004 
+<li>24 Stories 	#1 	January 2005 
+<li>24 	#1 	April 2014 
+<li>30 Days of Night 	#1–3 	August – October 2002 
+<li>30 Days of Night: 30 Days 'Til Death 	#1–4 	December 2008 – March 2009 
+<li>30 Days of Night: Annual 2004 	#1 	January 2004 
+<li>30 Days of Night: Annual 2005 	#1 	December 2005 
+<li>30 Days of Night: Beyond Barrow 	#1–3 	September 2007 – February 2008 
+<li>30 Days of Night: Bloodsucker Tales 	#1–8 	October 2004 – May 2005 
+<li>30 Days of Night: Dark Days 	#1–6 	June – December 2003 
+<li>30 Days of Night: Dead Space 	#1–3 	January – March 2006 
+<li>30 Days of Night: Eben and Stella 	#1–4 	May – August 2007 
+<li>30 Days of Night: Red Snow 	#1–3 	August – October 2007 
+<li>30 Days of Night: Return to Barrow 	#1–6 	March – August 2004 
+<li>30 Days of Night: Scriptbook 	#1 	October 2007 
+<li>30 Days of Night: Sourcebook 	#1 	January 2007 
+<li>30 Days of Night: Spreading the Disease 	#1–5 	December 2006 – April 2007 
+<li>Adventures in Oz 	#1 	February 2006 
+<li>Aleister Arcane 	#1–3 	April – June 2004 
+<li>Angel: After the Fall 	#1–17 	December 2007 – February 2009 
+<li>Angel: Auld Lang Syne 	#1–5 	November 2006 – March 2007 
+<li>Angel: The Curse 	#1–5 	June – October 2005 
+<li>Angel: Masks 	#1 	October 2006 
+<li>Angel: Old Friends 	#1–5 	November 2005 – March 2006 
+<li>Angel Scriptbook 	#1–7 	January – July 2006 
+<li>Angel Spotlight: Connor 	#1 	August 2006 
+<li>Angel Spotlight: Doyle 	#1 	July 2006 
+<li>Angel Spotlight: Gunn 	#1 	May 2006 
+<li>Angel Spotlight: Illyria 	#1 	April 2006 
+<li>Angel Spotlight: Wesley 	#1 	June 2006 
+<li>Art of Armitage 	#1 	
+<li>Art of Tommy Lee Edwards 	#1 	
+<li>Ascend: Special Edition 	#1 	January 2008
+<li><a href="../AtomicRobo/AtomicRobo.html">Atomic Robo</a>
+<li>A-Team: War Stories 	4	2010
+<li>A-Team: Shotgun Wedding 	#1–4 	March – April 2010 
+<li>Badger: Bull! 	#1 	November 2007 
+<li>Back to the Future 	#1- 	October 2015 – ongoing 
+<li>Badger Saves the World 	#1–5 	December 2007 – April 2008 
+<li>Battle Beasts 	#1–4 	July – October 2012 
+<li>Bigfoot 	#1–4 	February – May 2005 
+<li>Blood Stained Sword 	#1 	January 2005 
+<li>Castlevania: The Belmont Legacy 	#1–5 	March – July 2005 
+<li>Chiaroscuro 	#1 	November 2007 
+<li>Chicanos 	#1–8 	November 2005 – June 2006 
+<li>Children of the Grave 	#1 	December 2007 
+<li>The Claws Come Out 	#1 	November 2007 
+<li>Clive Barker's The Great and Secret Show 	#1–12 	March 2006 – May 2007 
+<li>Clive Barker's The Thief of Always 	#1–3 	January – May 2005 
+<li>Cobb: Off the Leash 	#1–3 	May – July 2006
+<li><a href="../ComicBookHistoryOfComics/ComicBookHistoryOfComics.html">Comic Book History of Comics</a> July 2012
+<li>The Complete Jon Sable: Freelance 	#1 	April 2005 – September 2007 
+<li>The Complete Wynonna Earp 	#1 	2005
+<li>Crawl To Me 	#1–4 	June – October 2011 
+<li>CSI: Bad Rap 	#1–5 	August – September 2003 
+<li>CSI: Demon House 	#1–5 	February – July 2004 
+<li>CSI: Dominos 	#1–5 	August – December 2004 
+<li>CSI: Dying in the Gutters 	#1–5 	October 2006 – February 2007 
+<li>CSI: Miami 	#1 	January 2005 
+<li>CSI: Miami – Blood/Money 	#1 	September 2004 
+<li>CSI: Miami – Smoking Gun 	#1 	October 2003 
+<li>CSI: Miami – Thou Shalt Not... 	#1 	April 2004 
+<li>CSI: NY - Bloody Murder 	#1–5 	July – November 2005 
+<li>CSI: Secret Identity 	#1–5 	February – June 2005 
+<li>CSI: Serial 	#1–5 	September 2003 
+<li>CSI: Thicker Than Blood 	#1 	July 2003 
+<li>CVO: African Blood 	#1–4 	September 2006 – May 2007 
+<li>CVO: Artifact 	#1–3 	October – December 2003 
+<li>CVO: Covert Vampiric Operations 	#1 	May 2003 
+<li>CVO: Human Touch 	#1 	August 2004 
+<li>CVO: Rogue State 	#1–5 	November 2004 – March 2005 
+<li>Dampyr 	#1–8 	April – July 2005 
+<li>D4VE 	#1–5 	
+<li>D4VE2 	#1–4 	
+<li>Dead, She Said 	#1–3 	May – December 2008 
+<li>Desperadoes: Banners of Gold 	#1–5 	December 2004 – April 2005 
+<li>The Devil's Rejects 	#1 	January 2005 
+<li>Dial M for Monster: A Cal McDonald Mystery 	#1 	September 2003 
+<li>Doctor Who 	#1–6 	2008
+<li>Doctor Who Ongoing (Tenth Doctor) 	#1–16 	2009
+<li>Doctor Who Ongoing (Eleventh Doctor) 	#1- Present 	2011
+<li>Doctor Who Classics 	#1–10 	2007
+<li>Doomed 	#1–4 	October 2005 – December 2006 
+<li>Dos Fantas: More Art of Ashley Wood	#1 	2002
+<li>Dracula's Revenge 	#1–2 	April – May 2004 
+<li>Dragon Age 	#1–6 	March – November 2010 
+<li>Dread Island 	#1 	2011 limited hardcover 
+<li>Dungeons and Dragons 	#0–15 	August 2010 – February 2012 
+<li>Dungeons and Dragons: Evil at Baldur's Gate 		April 2018 - ongoing 
+<li>Easy Way 	#1–4 	April – July 2005 
+<li>Epilogue 	#1–4 	October 2008 – January 2009 
+<li>Eric Red's Containment[3] 	#1–5 	January – May 2005 
+<li>Everybody's Dead[4] 	#1–5 	March – July 2008 
+<li>Fallen Angel 	#1–33 	December 2005 – December 2008 
+<li>First Strike 	#0–6 	August – October 2017 
+<li>FX 	#1–6 	March – August 2008 
+<li>G.I. Joe 	#0–27 	October 2008 – February 2011 
+<li>G.I. Joe: Cobra 	#1–4 	March – June 2009 
+<li>G.I. Joe: Operation Hiss 	#1–4 	February – May 2010 
+<li>G.I. Joe: Origins 	#1–23 	February 2009 – January 2011 
+<li>G.I. Joe: The Rise of Cobra: Official Movie Prequel 	#1–4 	March – June 2009 
+<li>G.I. Joe: The Rise of Cobra: Official Movie Adaptation 	#1–4 	June 2009 
+<li>G.I. Joe: Snake Eyes 	#1–4 	October 2009 – January 2010 
+<li>G.I. Joe Special: Helix 	#1 	August 2009 
+<li>G.I. Joe Special: Cobra 	#1 	September 2009 
+<li>Gene Pool 	#1 	October 2003 
+<li>George A. Romero's Dawn of the Dead 	#1–3 	2004
+<li>George A. Romero's Land of the Dead 	#1–5 	2005–2006 
+<li>Godzilla: Kingdom of Monsters 	#1–12 	2011–2012 
+<li>Godzilla: Gangsters and Goliaths 	#1–5 	2011
+<li>Godzilla: Legends 	#1–5 	2011–2012 
+<li>Godzilla (Ongoing) 	#1–13 	2012–2013 
+<li>Godzilla: The Half-Century War 	#1–5 	2012–2013 
+<li>Ghostbusters: The Other Side 	#1–4 	2008–2009 
+<li>Ghostbusters: Displaced Aggression 	#1–4 	September – December 2009 
+<li>Ghostbusters: Past, Present, Future 	#1 	2009
+<li>Ghostbusters: Tainted Love 	#1 	2010
+<li>Grand Fanta: The Best of Ashley Wood 		June 2004 
+<li>Grimjack: Killer Instinct 	#1–6 	January – June 2005 
+<li>Grimjack: The Manx Cat 	#1–6 	August 2009 – January 2010 
+<li>Groom Lake[5] 	#1–4 	March – July 2009 
+<li>Grumpy Old Monsters 	#1–4 	November 2003 – March 2004 
+<li>Guns, Drugs, and Monsters: A Cal McDonald Mystery 		February 2005 
+<li>Gutter Magic 	#1-4 	January 2016 - April 2016 
+<li>Hairball: A Cal McDonald Mystery 	#1 	October 2002 
+<li>Haven: After the Storm 		September 3, 2013 
+<li>Haven: In the Beginning 		August 26, 2014 
+<li>Heartbreakers Meet Boilerplate[6][7] 		August 2005 
+<li>Horrorcide 	#1 	September 2004 
+<li>HYDE 	#1 	October 2004 
+<li>IDW Poster Book 		
+<li>IDW Sampler 		
+<li>IDW Tales of Terror 		September 2004 
+<li>Infestation 		
+<li>Invasion '55 	#1–3 	October 1990 – May 1991 
+<li>Jem and the Holograms 		Mar. 25th, 2015 – Ongoing 
+<li>Jericho: Season 3 	#1–6 	Nov. 25th, 2009 – 2011 
+<li>Jericho: Season 4 	#1–2 	2012 – Ongoing 
+<li>Jon Sable, Freelance: Ashes of Eden 	#1–5 	October 2009 – February 2010 
+<li>Jon Sable, Freelance: Bloodtrail 	#1–6 	April – November 2005 
+<li>Journey: The Adventures of Wolverine McAlistaire 	#1–27 	March 1983 – April 1986 
+<li>Judge Dredd(IDW Publishing) 		
+<li>Jurassic Park 	#1–5 	June – October 2010 
+<li>Jurassic Park: The Devils in the Desert 	#1–4 	January – April 2011 
+<li>Jurassic Park: Dangerous Games 	#1–5 	September 2011– January 2012 
+<li>Karney 	#1–4 	July – September 2005 
+<li>The Keep 	#1–5 	September 2005 – March 2006 
+<li>Kill Shakespeare 	#1– 	April 2010 – ongoing 
+<li>Kull Eternal 	#1– 	June 2017 – ongoing 
+<li>The Last Resort 		April 2010 
+<li>The Legend of GrimJack 		
+<li>Legion 		
+<li>Legion: Prophets[10] 		
+<li>The Life and Times of Savior 28 		
+<li>Little Apple Dolls: Welcome to the Inbetween 		
+<li>Little Book of Horror: Dracula 		
+<li>Little Book of Horror: Frankenstein 		
+<li>Little Book of Horror: War of the Worlds 		
+<li><a href="../LockeAndKey/LockeAndKey.html">Locke &amp; Key</a>
+<li>Lore 		
+<li>Love is Love 		December 28, 2016 
+<li>Lurid 		
+<li>The Lurkers 		
+<li>Mage Knight: Stolen Destiny 		
+<li>Mage Knight: Rebellion 		
+<li>Magic the Gathering (Comic) 	#1- 	November 2011 – ongoing 
+<li>Mars IDW 		
+<li>Masters of Horror 		
+<li>The Maze Agency 		
+<li>Mean Streets 		March 2014 
+<li>Metal Gear Solid 		
+<li>Metal Gear Solid: Sons of Liberty 		
+<li>Monster House 		
+<li>The Mummy: The Rise and Fall of Xango's Ax 	#1–4 	April – July 2008 
+<li>My Little Pony: Friends Forever 	#1-38 	January 2014 – March 2017 
+<li>My Little Pony: Friendship Is Magic 	#1- 	November 2012 – ongoing 
+<li>My Little Pony: Micro-Series 	#1–10 	February – December 2013 
+<li>My Little Pony: Legends of Magic 	#1-12 	2017 –2018 
+<li>New Avengers/Transformers 	#1-4 	July 2007 - October 2007 
+<li>Night Mary 	#1–5 	July – November 2005 
+<li>Night Owl Society[14] 	#1–3 	April – June 2017 
+<li>Olympus Heights 		
+<li>Orphan Black 	#1–5 	February 2015 – August 2015 
+<li>Orphan Black: HELSINKI 		November 2015– 
+<li>Optimus Prime 	#1–25 	December 2016 – October 2018
+<li><a href="../Pandemica/Pandemica.html">Pandemica</a>
+<li>Pantheon
+<li><a href="../Parker/Parker.html">Parker</a>
+<li>The Pilgrim 		
+<li>Pirat Tales: Legend of the Cat O' Nine Tails		
+<li>Popbot 		
+<li>Popbot Reader 		
+<li>Presidential Material
+<li>Pristeen16 		
+<li>Red Panda: Mask of the Red Panda 		2014
+<li>Remains 		
+<li>Revolution 	#0–5 	July 2016 – November 2016 
+<li>Revolutionaries 	#1–8 	January 2017 – July 2017 
+<li>Richard Matheson's Hell House 		
+<li>Richard Matheson's I Am Legend 		
+<li>Road to Hell 		
+<li>Rom 	#1–14 	May 2016 – November 2017 
+<li>Rom &amp; The Micronauts 	#1–5 	December 2017 – May 2018 
+<li>Rom: Dire Wraiths 		upcoming 
+<li>Rom vs. Transformers: Shining Armor 	#1–5 	July 2017 – November 2017 
+<li><a href="../SaucerState/SaucerState.html">Saucer State</a>
+<li>Savage Membrane: A Cal McDonald Mystery 		
+<li>Saw: Rebirth 		
+<li>Scarface: Devil in Disguise 		
+<li>Scarface: Scarred for Life 		
+<li>Secret Skull 		
+<li>Sencilla Fanta: Ashley Wood Sketchbook 		
+<li>Seven Block 		
+<li>Shadowplay 		
+<li>Shaun of the Dead 		
+<li>Shield: Spotlight 		
+<li>Silent Hill: Among the Damned 		2004
+<li>Silent Hill: Dead/Alive 		2005–2006 
+<li>Silent Hill: Dying Inside 		2004
+<li>Silent Hill: The Grinning Man 		2005
+<li>Silent Hill: Hunger 		2006
+<li>Silent Hill: Paint It Black 		2005
+<li>Silent Hill: Past Life 		2010
+<li>Silent Hill: Sinner's Reward 		2008
+<li>Singularity 7 		
+<li>Slab 		
+<li>Smoke 		
+<li>Song of Saya		2010
+<li>Sonic the Hedgehog 		April 2018–ongoing 
+<li>Sparrow: Ashley Wood 		
+<li>Speed Racer, Volume 1 		
+<li>Speed Racer, Volume 2 		
+<li>Speed Racer, Volume 3 		
+<li>Speed Racer, Volume 4 		
+<li>Speed Racer, Volume 5 		
+<li>Speed Racer: Chronicles of the Racer 		
+<li>Speed Racer: Racer X, Volume 1 		
+<li>Speed Racer and Racer X: The Origins Collection 		
+<li>Spike: After the Fall 		
+<li>Spike: Asylum 		
+<li>Spike: Shadow Puppets 		
+<li>Spike: Lost and Found 		
+<li>Spike: Old Times 		
+<li>Spike: Old Wounds 		
+<li>Spike vs. Dracula 		
+<li>Spookhouse 		
+<li>Squidder 		
+<li>Star Mage 	6	April 2014 – Ongoing 
+<li>Star Trek: Alien Spotlight 		
+<li>Star Trek: Assignment: Earth 		
+<li>Star Trek: Burden of Knowledge 		
+<li>Star Trek: Captain's Log 		
+<li>Star Trek: Countdown 		
+<li>Star Trek: Countdown To Darkness 		February 2013 – Ongoing 
+<li>Star Trek: Crew 		
+<li>Star Trek: Deep Space Nine: Fools Gold 		
+<li>Star Trek: Klingons: Blood Will Tell 		
+<li>Star Trek: Leonard McCoy, Frontier Doctor 		
+<li>Star Trek: Mirror Images 		
+<li>Star Trek: Mission's End 		
+<li>Star Trek: Nero 		
+<li>Star Trek: New Frontier: Turnaround 		
+<li>Star Trek: Romulans: The Hollow Crown 		
+<li>Star Trek: Romulans: Schism 		
+<li>Star Trek: Spock: Reflections 		
+<li>Star Trek: The Next Generation: Ghosts 		
+<li>Star Trek: The Next Generation: Intelligence Gathering 		
+<li>Star Trek: The Next Generation: The Last Generation 		
+<li>Star Trek: The Next Generation: The Space Between 		
+<li>Star Trek: Year Four 		
+<li>Star Trek: Year Four: The Enterprise Experiment 		
+<li>Star Trek II: The Wrath of Khan 		
+<li>Star Trek Movie Adaptation 		
+<li>Star Trek vs Transformers 		
+<li>Steve Niles' Cellar of Nastiness 		
+<li>The Strange Death Of Alex Raymond: A Metaphysical History of Comics Photorealism 		
+<li><a href="../StrangeScienceFantasy/StrangeScienceFantasy.html">Strange Science Fantasy</a>
+<li>Street Fighter x G.I. Joe and Transformers 		
+<li>The Suicide Forest 		
+<li>Super Bad James Dynomite 		
+<li>Super Deluxe Hero Happy Hour: The Lost Episode 		
+<li>Supermarket 		
+<li>Supernatural Freak Machine: A Cal McDonald Mystery 		
+<li>Swallow 		
+<li>Sword of Dracula 		
+<li>Tank Girl: The Gifting 		
+<li>Teenage Mutant Ninja Turtles (ongoing) 		August 2011 – present 
+<li>That Hell-Bound Train 		
+<li>Tilting at Windmills 		
+<li>Tommyrot: The Art of Ben Templesmith 		
+<li>The Transformers 	#1–31 	November 2009 – December 2011 
+<li>Transformers 		March 2019 
+<li>The Transformers: All Hail Megatron 	#1–16 	July 2008 – October 2009 
+<li>The Transformers: The Animated Movie 	#1–4 	October 2006 – January 2007 
+<li>The Transformers: The Ark – A CompleteCompendium of Transformers Animation Models 	#1 	May 2007 
+<li>The Transformers: Autocracy 	#1–12 	January 2012 – June 2012 
+<li>Transformers: Beast Wars – The Ascending 	#1–4 	October 2007 – January 2008 
+<li>Transformers: Beast Wars – The Gathering 	#1–4 	February 2006 – May 2006 
+<li>Transformers: Beast Wars – Sourcebook 	#1–4 	August 2007 – February 2008 
+<li>The Transformers: The Best of Don Figueroa 		
+<li>The Transformers: The Best of Simon Furman 		
+<li>The Transformers: Best of UK 		
+<li>The Transformers: Bumblebee 	#1–4 	December 2009 – March 2010 
+<li>The Transformers Continuum 		November 2009 
+<li>The Transformers: Combiner Hunters 		July 2015 
+<li>Transformers: Cybertron: Balancing Act 	#1–12 	
+<li>The Transformers: Dark Cybertron 		November 2013 &amp; March 2014 
+<li>Transformers: The Death of Optimus Prime 		December 2011 
+<li>The Transformers: Devastation 	#1–6 	October 2007 – February 2008 
+<li>The Transformers: Drift 	#1–4 	September 2010 – October 2010 
+<li>The Transformers: Drift - Empire of Stone 	#1–4 	November 2014 – February 2015 
+<li>The Transformers: Escalation 	#1–6 	November 2006 – April 2007 
+<li>The Transformers: Evolutions – Hearts of Steel 	#1–4 	June 2006 – September 2006 
+<li>Transformers: Generation 1, Volume One 		
+<li>Transformers: Generation 1, Volume Two 		
+<li>The Transformers: Generations 		
+<li>The Transformers: Greatest Battles of Optimus Prime and Megatron 		
+<li>The Transformers: Heart of Darkness 	#1–4 	March 2011 – June 2011 
+<li>The Transformers Holiday Special 		December 2015 
+<li>The Transformers: Infestation 	#1–2 	February 2011 
+<li>The Transformers: Infiltration 	#0–6 	October 2005 – July 2006 
+<li>The Transformers: Ironhide 	#1–4 	May 2010 – August 2010 
+<li>The Transformers: Last Stand of the Wreckers 	#1–5 	January 2010 – May 2010 
+<li>The Transformers: Lost Light 	#1–25 	December 2016 – November 2018 
+<li>The Transformers: Maximum Dinobots 	#1–5 	December 2008 – April 2009 
+<li>The Transformers: Megatron Origin 	#1–4 	June 2007 – October 2007 
+<li>The Transformers: Monstrosity 	#1–12 	March 2013 – July 2013 
+<li>The Transformers: More than Meets the Eye 	#1–57 	January 2012 – September 2016 
+<li>Transformers: Movie Adaptation 		
+<li>Transformers: Movie Prequel 		
+<li>Transformers: Movie Prequel - Saga of the Allspark 		
+<li>Transformers: Nefarious 		
+<li>The Transformers: Primacy 	#1–4 	August 2014 – November 2014 
+<li>The Transformers: Punishment 		June 2014 
+<li>The Transformers: Redemption 		October 2015 
+<li>Transformers: The Reign of Starscream 		
+<li>Transformers: Requiem of the Wreckers 		May 2018 
+<li>The Transformers: Revelation 		
+<li>Transformers: Revenge of the Fallen Movie Prequel - Alliance 		
+<li>Transformers: Revenge of the Fallen Movie Prequel - Defiance 		
+<li>The Transformers: Robots in Disguise 	#1–57 	January 2012 – September 2016 
+<li>The Transformers: Salvation 		June 2017 
+<li>The Transformers: Sins of the Wreckers 	#1–5 	November 2015 – June 2016 
+<li>The Transformers: Spotlight 		September 2006 – May 2013 
+<li>The Transformers: Stormbringer 	#1–4 	July 2006 – October 2006 
+<li>Transformers: Tales of the Fallen 		
+<li>The Transformers: Target 2006 		
+<li>The Transformers: Till All Are One 	#1–12 	June 2016 – December 2017 
+<li>The Transformers: Titans Return 		July 2016 
+<li>Transformers: Unicron 	#1–7 	May 2018 – November 2018 
+<li>Transformers vs. Visionaries 	#1–5 	January 2018 – May 2018 
+<li>Transformers: The War Within, Volume 1 		
+<li>Transformers: The War Within, Volume 2 – The Dark Ages 		
+<li>The Transformers: Windblade 	#1–4 	April 2014 – July 2014 
+<li>Transformers Animated: The Arrival 		
+<li>Tres Fanta: Even More Art of Ashley Wood 		
+<li>True Blood 	#1–6 	July – December 2010 
+<li>True Blood: Tainted Love 	#1–6 	February – July 2011 
+<li>True Blood: The French Quarter 	#1–6 	September 2011 – February 2012 
+<li>The Unauthorized Puffed Movie Adaptation 	#1 	May 2005 
+<li>Underworld 		
+<li>Underworld: Evolution 		
+<li>Underworld: Red in Tooth and Claw 		
+<li>Underworld: Rise of the Lycans[24] 		
+<li>Uno Fanta Art: The Art of Ashley Wood 		
+<li>Vampire Hunter D 		2006
+<li>The Vanishers 	#1 	May 2002 
+<li>The Very Big Monster Show' 	#1 	December 2004 
+<li>War of the Undead 		
+<li>Wake the Dead 		
+<li>We Will Bury You 		
+<li>Will Eisner's John Law 		
+<li>Will Eisner's John Law: Angels and Ashes, Devils and Dust 		
+<li>Wire Hangers[25] 		
+<li>Witch and Wizard: Battle for Shadowland 		
+<li>World War Robot 		
+<li>Wormwood: Gentleman Corpse 		
+<li>Wormwood: Gentleman Corpse - The Taster 		
+<li>Wynonna Earp: Home On The Strange 		
+<li>Wynonna Earp: The Yeti Wars 		
+<li>The X-Files: Season 10 	#1–26 	June 2013 – June 2015 
+<li>Yakuza Demon Killers 	#1– 	November 2016- 
+<li>Zombies! Eclipse of the Undead 	#1–4 	November 2006 – February 2007 
+<li>Zombies! Feast 	#1–5 	May – October 2006 
+<li>Zombies vs. Robots 	#1–2 	October – December 2006 
+<li>Zombies vs. Robots Adventure 	#1–4 	February – May 2010 
+<li>Zombies VS Robots: Undercity 	#1–4 	April – July 2011 
+<li>Zombies VS Robots VS Amazons 	#1–3 	September 2007 – February 2008 
+<li>Zombies vs Robots: Women On War! 	#1 	November 2012 
+
 </p>
 
 </body>
