--- a/Weirdo/Weirdo.html
+++ b/Weirdo/Weirdo.html
@@ -11,7 +11,7 @@
 <img src="Weirdo01.jpg"> <br>
 Creator: Robert Crumb<br>
 Series: on-going, 28 issues<br>
-Publisher: 1981 Last Gasp<br>
+Publisher: 1981 <a href="../LastGasp/LastGasp.html">Last Gasp</a><br>
 <p>
 Weirdo is a magazine-sized comics anthology created by Robert Crumb and published by Last Gasp from 1981 to 1993.
 </p><p>
