--- a/Zap/zap.html
+++ b/Zap/zap.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-<img src="zap00.jpg" title="Zap #0">
+<img src="zap00.jpg" title="Zap #0"><br>
+17 issues from 1968 - 1980 by Apex Novelty and <a href="../LastGasp/LastGasp.html">Last Gasp</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -41,7 +42,6 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Series: 17 issues in 1968 by Apex Novelty<br>
 Creators: <a href="../RobertCrumb/RobertCrumb.html">Robert Crumb</a>, <a href="../GilbertShelton/GilbertShelton.html">Gilbert Shelton</a>, <a href="../RobertWilliams/RobertWilliams.html">Robert Williams</a>, <a href="../RickGriffin/RickGriffin.html">Rick Griffin</a>, Paul Mavrides, Victor Moscoso, S. Clay Wilson, , Spain Rodriguez
 </p><p>
 Zap Comix is an underground comix series which was originally part of the youth counterculture of the late 1960s. While a few small-circulation self-published satirical comic books had been printed prior to this, Zap became the model for the "comix" movement that snowballed after its release.
