--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
 </tr>
 
 <tr>
+<td>1000 Jokes</td>
+<td>1938</td>
+<td>Dell</td>
+<td><a href="1000Jokes/1000Jokes.html">Details</a></td>
+</tr>
+
+<tr>
 <td>1001 (Arabian) Nights</td>
 <td>1704</td>
 <td>Antoine Galland</td>
@@ -1478,6 +1485,13 @@
 <td>1929</td>
 <td>Creator</td>
 <td><a href="AnantPai/AnantPai.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Anarchy Comics</td>
+<td>1978</td>
+<td>Last Gasp</td>
+<td><a href="Anarchy/Anarchy.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5009,6 +5023,13 @@
 <td>2009</td>
 <td>Vertigo</td>
 <td><a href="DeliriumsParty/DeliriumsParty.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dell Comics</td>
+<td>1929</td>
+<td>Publisher</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9370,6 +9391,13 @@
 </tr>
 
 <tr>
+<td>Last Gasp</td>
+<td>1970</td>
+<td>Publisher</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Last Man Standing: Killbook of a Bounty Hunter</td>
 <td>2010</td>
 <td>Dark Horse</td>
@@ -9932,7 +9960,7 @@
 <tr>
 <td>Mandrake the Magician</td>
 <td>1934</td>
-<td>King Comics</td>
+<td>King Features</td>
 <td><a href="MandrakeTheMagician/MandrakeTheMagician.html">Details</a></td>
 </tr>
 
